--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Retro Future Vehicles</title>
+    <title>Retro Futuristic Vehicles</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
